# vytallink-health-kit

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.observability.yml  pyproject.toml
.agent/rules/: GEMINI.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: architecture.md  automation.md  copilot-instructions.md  domain-boundaries.md  orchestration.md  standards.md
.github/skills/: README.md  create_mle_agent_package.md  create_repository_interface.md  create_use_case.md  execute_engineering_task.md  generate_e2e_tests.md  generate_implementation_docs.md  generate_migration_plan.md  plan_and_execute_feature.md  refactor_to_clean_architecture.md  validate_module_structure.md
.github/workflows/: docs-quality-guardrails.yml
docs/: configuration.md  development-hooks.md  domain.md  implementation-template.md  observability.md  skills-management.md  template-sync.md  vytallink-integration-guide.md
notebooks/: base.ipynb  health_chat_demo.ipynb  time_series_anomaly_detection.ipynb
observability/: otel-collector-config.yaml
observability/grafana/provisioning/dashboards/: dashboards.yaml  vytallink-app.json
observability/loki/: loki-config.yaml
observability/prometheus/: prometheus.yml
observability/promtail/: promtail-config.yaml
src/ml_python_base/: __init__.py
src/vytallink_health_kit/: __init__.py  cli.py
src/vytallink_health_kit/application/: __init__.py  ports.py  use_cases.py
src/vytallink_health_kit/domain/: entities.py  metrics.py  readiness.py
src/vytallink_health_kit/infrastructure/: llm.py  observability.py  settings.py  vytallink_client.py
tests/: conftest.py  test_cli.py  test_llm.py  test_metrics.py  test_settings.py  test_use_case.py  test_vytallink_client.py
