[project]
name = "vytallink-health-kit"
version = "0.1.0"
description = "VytalLink Health Kit — Daily Readiness Agent for hackathons"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "httpx>=0.28.1",
    "anthropic>=0.86.0",
    "openai==2.29.0",
    "typer>=0.24.1",
    "python-dotenv>=1.2.2",
    "rich>=14.2.0",
    "pydantic-settings>=2.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vytallink_health_kit"]

[tool.ruff]
# Configuración general de Ruff
line-length = 88
target-version = "py311"

# Directorios a incluir y excluir
include = ["*.py", "*.pyi", "**/pyproject.toml"]
extend-exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "htmlcov",
]

[tool.ruff.lint]
# Reglas habilitadas (compatible con Black, Flake8, isort, pyupgrade, bugbear)
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (ordenar imports)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade (modernizar código Python)
    "ARG",    # flake8-unused-arguments
    "C90",    # mccabe (complejidad)
    "T20",    # flake8-print (detectar prints olvidados)
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]

# Ignorar reglas específicas si es necesario
ignore = [
    "E501",   # line too long (lo maneja el formatter)
    "B008",   # do not perform function calls in argument defaults (común en FastAPI)
    "C901",   # too complex (ajustar según necesidades del proyecto)
    "W191",   # indentation contains tabs (lo maneja el formatter)
]

# Permitir autofix para estas reglas
fixable = ["ALL"]
unfixable = []

# Permitir imports no usados en __init__.py
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/**/*.py" = ["ARG001", "ARG002"]  # Fixtures de pytest pueden parecer no usados

[tool.ruff.lint.isort]
# Configuración compatible con Black
known-first-party = ["vytallink_health_kit"]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.lint.mccabe]
# Complejidad ciclomática máxima
max-complexity = 10

[tool.ruff.format]
# Configuración del formatter (compatible con Black)
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
# Configuración de pytest
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov-report=term-missing:skip-covered",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
# Configuración de coverage
source = ["src"]
omit = [
    "tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    ".venv/*",
]

[tool.coverage.report]
# Reportes de cobertura
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "pre-commit>=3.8.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff",
    "nbstripout>=0.7.0",
    "ipykernel",
]
