[project]
name = "vytallink-health-kit"
version = "0.1.0"
description = "VytalLink Health Kit — Daily Readiness Agent for hackathons"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "httpx>=0.28.1",
    "anthropic>=0.86.0",
    "openai==2.29.0",
    "typer>=0.24.1",
    "python-dotenv>=1.2.2",
    "rich>=14.2.0",
    "pydantic-settings>=2.13.1",
    "tenacity>=8.5.0",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
]

[project.optional-dependencies]
data-science = [
    "pyarrow",
    "fastparquet",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "torch>=2.4.0",
]

[project.scripts]
vytallink-health-kit = "vytallink_health_kit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vytallink_health_kit"]

[tool.ruff]
# General Ruff configuration
line-length = 88
target-version = "py311"

# Directories to include and exclude
include = ["*.py", "*.pyi", "**/pyproject.toml"]
extend-exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "htmlcov",
]

[tool.ruff.lint]
# Enabled rules (compatible with Black, Flake8, isort, pyupgrade, and bugbear)
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade (modernize Python code)
    "ARG",    # flake8-unused-arguments
    "C90",    # mccabe (complexity)
    "T20",    # flake8-print (detect forgotten prints)
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]

# Ignore specific rules when needed
ignore = [
    "E501",   # line too long (handled by the formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex (adjust if the project truly needs it)
    "W191",   # indentation contains tabs (handled by the formatter)
]

# Allow autofix for these rules
fixable = ["ALL"]
unfixable = []

# Allow unused imports in __init__.py
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/**/*.py" = ["ARG001", "ARG002"]  # Pytest fixtures may look unused
# datetime.date must be a runtime import in Pydantic v2 models (field annotations resolved at runtime)
"src/vytallink_health_kit/domain/entities.py" = ["TCH003"]
"src/vytallink_health_kit/domain/readiness.py" = ["TCH003"]
"src/vytallink_health_kit/application/use_cases.py" = ["TCH003"]

[tool.ruff.lint.isort]
# Black-compatible import configuration
known-first-party = ["vytallink_health_kit"]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.lint.mccabe]
# Maximum cyclomatic complexity
max-complexity = 10

[tool.ruff.format]
# Black-compatible formatter configuration
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
# Pytest configuration
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov-report=term-missing:skip-covered",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
# Coverage configuration
source = ["src"]
omit = [
    "tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    ".venv/*",
]

[tool.coverage.report]
# Coverage reports
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "pre-commit>=3.8.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff",
    "nbstripout>=0.7.0",
    "ipykernel",
]
